--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
-<DOCTYPE html/>
-<html>
-    <head>
-
-    </head>
-    <body>
-        <h1>une soeur</h1>
-        <h2>BlackSun225 is here</h2
-         <u><h1>une soeur</h1></u>             
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        nav{
+            width: 100%;
+            height: 90px;
+            background-color: #ccc;
+        }
+    </style>
+</head>
+<body>
+    <nav>
+        <h1>Lostvayne</h1>
+        <div class="set">
+            <ul class="assets">
+                <li>About</li>
+                <li>Services</li>
+                <li>Login</li>
+                <li>Signup</li>
+            </ul>
+        </div>
+    </nav>
+</body>
 </html>
