--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        nav{
-            width: 100%;
-            height: 90px;
-            background-color: #ccc;
+        *{
+            list-style: none;
+            padding: 0;
+            margin: 0;
         }
+        nav{
+            width: 91%;
+            height: auto;
+            background-color: #ccc;
+            display: flex;
+            padding: 10px 59px;
+            justify-content: space-between;
+        }
+        div{
+            display: flex;
+        }
+        ul{
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+            font-size: 20px;
+            color: blue;
+        }
+
     </style>
 </head>
-    
 <body>
     <nav>
         <h1>Lostvayne</h1>
@@ -25,5 +43,6 @@
             </ul>
         </div>
     </nav>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/c09XiwOZKsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
